--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+.AppContd1{
+  max-width: 1200px;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.AppContd{
+  background-color: #9ba9eb;
+  padding: 2rem 1rem;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.AppContdImg img{
+  width: 200px;
+  margin-bottom: 2rem;
 }
